; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_vfsops.c_nfs_mount_rele.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_vfsops.c_nfs_mount_rele.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsmount = type { i32, i32, i32 }

@.str = private unnamed_addr constant [28 x i8] c"nfs zombie mount underflow\0A\00", align 1
@NFSSTA_MOUNT_DRAIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfs_mount_rele(%struct.nfsmount* %0) #0 {
  %2 = alloca %struct.nfsmount*, align 8
  %3 = alloca i32, align 4
  store %struct.nfsmount* %0, %struct.nfsmount** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %5 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %4, i32 0, i32 2
  %6 = call i32 @lck_mtx_lock(i32* %5)
  %7 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %8 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp slt i32 %9, 1
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = call i32 @panic(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %1
  %14 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %15 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, -1
  store i32 %17, i32* %15, align 4
  %18 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %19 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %13
  %23 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %24 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @NFSSTA_MOUNT_DRAIN, align 4
  %27 = and i32 %25, %26
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %22, %13
  %29 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %30 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %29, i32 0, i32 2
  %31 = call i32 @lck_mtx_unlock(i32* %30)
  %32 = load i32, i32* %3, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %28
  %35 = load %struct.nfsmount*, %struct.nfsmount** %2, align 8
  %36 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %35, i32 0, i32 0
  %37 = call i32 @wakeup(i32* %36)
  br label %38

38:                                               ; preds = %34, %28
  ret void
}

declare dso_local i32 @lck_mtx_lock(i32*) #1

declare dso_local i32 @panic(i8*) #1

declare dso_local i32 @lck_mtx_unlock(i32*) #1

declare dso_local i32 @wakeup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
